[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/minigames/MG.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/minigame_scripts/MG_RaceTower.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/Terrain.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "flow",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 960, 32 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 448, 1792 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 448, 896 )

[node name="MG_Race_Tower" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlayerOneSpawnF" parent="SpawnPoints" index="0"]
position = Vector2( 256, -256 )

[node name="PlayerTwoSpawnF" parent="SpawnPoints" index="1"]
position = Vector2( 352, -256 )

[node name="PlayerThreeSpawnF" parent="SpawnPoints" index="2"]
position = Vector2( 544, -256 )

[node name="PlayerFourSpawnF" parent="SpawnPoints" index="3"]
position = Vector2( 736, -256 )

[node name="CanvasLayer" parent="." index="2"]
editor/display_folded = false

[node name="Lava" type="Area2D" parent="." index="3"]
editor/display_folded = true
position = Vector2( 448, 600 )
collision_layer = 0
collision_mask = 960
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Lava" index="0"]
modulate = Color( 0.933333, 0.545098, 0, 1 )
scale = Vector2( 30, 1 )
frames = SubResource( 2 )
animation = "flow"

[node name="Shape" type="CollisionShape2D" parent="Lava" index="1"]
shape = SubResource( 3 )

[node name="ActiveArea" type="Area2D" parent="." index="4"]
editor/display_folded = true
visible = false
position = Vector2( 448, -1792 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Size" type="CollisionShape2D" parent="ActiveArea" index="0"]
shape = SubResource( 1 )

[node name="ActiveChunkOne" type="Node2D" parent="." index="5"]

[node name="ActiveChunkOneArea" type="Area2D" parent="ActiveChunkOne" index="0"]
editor/display_folded = true
position = Vector2( 448, -448 )
__meta__ = {
"_edit_lock_": true
}

[node name="Size" type="CollisionShape2D" parent="ActiveChunkOne/ActiveChunkOneArea" index="0"]
shape = SubResource( 4 )

[node name="Terrain" type="Node2D" parent="ActiveChunkOne" index="1"]
editor/display_folded = true
position = Vector2( 448, -896 )

[node name="Terrain" parent="ActiveChunkOne/Terrain" index="0" instance=ExtResource( 4 )]
position = Vector2( -416, 864 )

[node name="Terrain19" parent="ActiveChunkOne/Terrain" index="1" instance=ExtResource( 4 )]
position = Vector2( -416, 864 )

[node name="Terrain7" parent="ActiveChunkOne/Terrain" index="2" instance=ExtResource( 4 )]
position = Vector2( -160, 864 )

[node name="Terrain23" parent="ActiveChunkOne/Terrain" index="3" instance=ExtResource( 4 )]
position = Vector2( -160, 864 )

[node name="Terrain11" parent="ActiveChunkOne/Terrain" index="4" instance=ExtResource( 4 )]
position = Vector2( 96, 864 )

[node name="Terrain26" parent="ActiveChunkOne/Terrain" index="5" instance=ExtResource( 4 )]
position = Vector2( 96, 864 )

[node name="Terrain14" parent="ActiveChunkOne/Terrain" index="6" instance=ExtResource( 4 )]
position = Vector2( 352, 864 )

[node name="Terrain27" parent="ActiveChunkOne/Terrain" index="7" instance=ExtResource( 4 )]
position = Vector2( 352, 864 )

[node name="Terrain13" parent="ActiveChunkOne/Terrain" index="8" instance=ExtResource( 4 )]
position = Vector2( 416, 864 )

[node name="Terrain32" parent="ActiveChunkOne/Terrain" index="9" instance=ExtResource( 4 )]
position = Vector2( 416, 608 )

[node name="Terrain65" parent="ActiveChunkOne/Terrain" index="10" instance=ExtResource( 4 )]
position = Vector2( -416, 608 )

[node name="Terrain37" parent="ActiveChunkOne/Terrain" index="11" instance=ExtResource( 4 )]
position = Vector2( 416, 352 )

[node name="Terrain70" parent="ActiveChunkOne/Terrain" index="12" instance=ExtResource( 4 )]
position = Vector2( -416, 352 )

[node name="Terrain42" parent="ActiveChunkOne/Terrain" index="13" instance=ExtResource( 4 )]
position = Vector2( 416, 96 )

[node name="Terrain72" parent="ActiveChunkOne/Terrain" index="14" instance=ExtResource( 4 )]
position = Vector2( -416, 96 )

[node name="Terrain47" parent="ActiveChunkOne/Terrain" index="15" instance=ExtResource( 4 )]
position = Vector2( 416, -160 )

[node name="Terrain79" parent="ActiveChunkOne/Terrain" index="16" instance=ExtResource( 4 )]
position = Vector2( -416, -160 )

[node name="Terrain52" parent="ActiveChunkOne/Terrain" index="17" instance=ExtResource( 4 )]
position = Vector2( 416, -416 )

[node name="Terrain81" parent="ActiveChunkOne/Terrain" index="18" instance=ExtResource( 4 )]
position = Vector2( -416, -416 )

[node name="Terrain57" parent="ActiveChunkOne/Terrain" index="19" instance=ExtResource( 4 )]
position = Vector2( 416, -672 )

[node name="Terrain82" parent="ActiveChunkOne/Terrain" index="20" instance=ExtResource( 4 )]
position = Vector2( -416, -672 )

[node name="Terrain28" parent="ActiveChunkOne/Terrain" index="21" instance=ExtResource( 4 )]
position = Vector2( 416, 864 )

[node name="Terrain33" parent="ActiveChunkOne/Terrain" index="22" instance=ExtResource( 4 )]
position = Vector2( 416, 608 )

[node name="Terrain66" parent="ActiveChunkOne/Terrain" index="23" instance=ExtResource( 4 )]
position = Vector2( -416, 608 )

[node name="Terrain38" parent="ActiveChunkOne/Terrain" index="24" instance=ExtResource( 4 )]
position = Vector2( 416, 352 )

[node name="Terrain71" parent="ActiveChunkOne/Terrain" index="25" instance=ExtResource( 4 )]
position = Vector2( -416, 352 )

[node name="Terrain43" parent="ActiveChunkOne/Terrain" index="26" instance=ExtResource( 4 )]
position = Vector2( 416, 96 )

[node name="Terrain77" parent="ActiveChunkOne/Terrain" index="27" instance=ExtResource( 4 )]
position = Vector2( -416, 96 )

[node name="Terrain50" parent="ActiveChunkOne/Terrain" index="28" instance=ExtResource( 4 )]
position = Vector2( 416, -160 )

[node name="Terrain94" parent="ActiveChunkOne/Terrain" index="29" instance=ExtResource( 4 )]
position = Vector2( -416, -160 )

[node name="Terrain56" parent="ActiveChunkOne/Terrain" index="30" instance=ExtResource( 4 )]
position = Vector2( 416, -416 )

[node name="Terrain88" parent="ActiveChunkOne/Terrain" index="31" instance=ExtResource( 4 )]
position = Vector2( -416, -416 )

[node name="Terrain60" parent="ActiveChunkOne/Terrain" index="32" instance=ExtResource( 4 )]
position = Vector2( 416, -672 )

[node name="Terrain92" parent="ActiveChunkOne/Terrain" index="33" instance=ExtResource( 4 )]
position = Vector2( -416, -672 )

[node name="Terrain29" parent="ActiveChunkOne/Terrain" index="34" instance=ExtResource( 4 )]
position = Vector2( 416, 800 )

[node name="Terrain62" parent="ActiveChunkOne/Terrain" index="35" instance=ExtResource( 4 )]
position = Vector2( -416, 800 )

[node name="Terrain34" parent="ActiveChunkOne/Terrain" index="36" instance=ExtResource( 4 )]
position = Vector2( 416, 544 )

[node name="Terrain67" parent="ActiveChunkOne/Terrain" index="37" instance=ExtResource( 4 )]
position = Vector2( -416, 544 )

[node name="Terrain39" parent="ActiveChunkOne/Terrain" index="38" instance=ExtResource( 4 )]
position = Vector2( 416, 288 )

[node name="Terrain75" parent="ActiveChunkOne/Terrain" index="39" instance=ExtResource( 4 )]
position = Vector2( -416, 288 )

[node name="Terrain44" parent="ActiveChunkOne/Terrain" index="40" instance=ExtResource( 4 )]
position = Vector2( 416, 32 )

[node name="Terrain73" parent="ActiveChunkOne/Terrain" index="41" instance=ExtResource( 4 )]
position = Vector2( -416, 32 )

[node name="Terrain48" parent="ActiveChunkOne/Terrain" index="42" instance=ExtResource( 4 )]
position = Vector2( 416, -224 )

[node name="Terrain90" parent="ActiveChunkOne/Terrain" index="43" instance=ExtResource( 4 )]
position = Vector2( -416, -224 )

[node name="Terrain55" parent="ActiveChunkOne/Terrain" index="44" instance=ExtResource( 4 )]
position = Vector2( 416, -480 )

[node name="Terrain85" parent="ActiveChunkOne/Terrain" index="45" instance=ExtResource( 4 )]
position = Vector2( -416, -480 )

[node name="Terrain58" parent="ActiveChunkOne/Terrain" index="46" instance=ExtResource( 4 )]
position = Vector2( 416, -736 )

[node name="Terrain83" parent="ActiveChunkOne/Terrain" index="47" instance=ExtResource( 4 )]
position = Vector2( -416, -736 )

[node name="Terrain30" parent="ActiveChunkOne/Terrain" index="48" instance=ExtResource( 4 )]
position = Vector2( 416, 736 )

[node name="Terrain63" parent="ActiveChunkOne/Terrain" index="49" instance=ExtResource( 4 )]
position = Vector2( -416, 736 )

[node name="Terrain35" parent="ActiveChunkOne/Terrain" index="50" instance=ExtResource( 4 )]
position = Vector2( 416, 480 )

[node name="Terrain68" parent="ActiveChunkOne/Terrain" index="51" instance=ExtResource( 4 )]
position = Vector2( -416, 480 )

[node name="Terrain40" parent="ActiveChunkOne/Terrain" index="52" instance=ExtResource( 4 )]
position = Vector2( 416, 224 )

[node name="Terrain76" parent="ActiveChunkOne/Terrain" index="53" instance=ExtResource( 4 )]
position = Vector2( -416, 224 )

[node name="Terrain45" parent="ActiveChunkOne/Terrain" index="54" instance=ExtResource( 4 )]
position = Vector2( 416, -32 )

[node name="Terrain74" parent="ActiveChunkOne/Terrain" index="55" instance=ExtResource( 4 )]
position = Vector2( -416, -32 )

[node name="Terrain49" parent="ActiveChunkOne/Terrain" index="56" instance=ExtResource( 4 )]
position = Vector2( 416, -288 )

[node name="Terrain80" parent="ActiveChunkOne/Terrain" index="57" instance=ExtResource( 4 )]
position = Vector2( -416, -288 )

[node name="Terrain53" parent="ActiveChunkOne/Terrain" index="58" instance=ExtResource( 4 )]
position = Vector2( 416, -544 )

[node name="Terrain93" parent="ActiveChunkOne/Terrain" index="59" instance=ExtResource( 4 )]
position = Vector2( -416, -544 )

[node name="Terrain61" parent="ActiveChunkOne/Terrain" index="60" instance=ExtResource( 4 )]
position = Vector2( 416, -800 )

[node name="Terrain86" parent="ActiveChunkOne/Terrain" index="61" instance=ExtResource( 4 )]
position = Vector2( -416, -800 )

[node name="Terrain31" parent="ActiveChunkOne/Terrain" index="62" instance=ExtResource( 4 )]
position = Vector2( 416, 672 )

[node name="Terrain64" parent="ActiveChunkOne/Terrain" index="63" instance=ExtResource( 4 )]
position = Vector2( -416, 672 )

[node name="Terrain36" parent="ActiveChunkOne/Terrain" index="64" instance=ExtResource( 4 )]
position = Vector2( 416, 416 )

[node name="Terrain69" parent="ActiveChunkOne/Terrain" index="65" instance=ExtResource( 4 )]
position = Vector2( -416, 416 )

[node name="Terrain41" parent="ActiveChunkOne/Terrain" index="66" instance=ExtResource( 4 )]
position = Vector2( 416, 160 )

[node name="Terrain78" parent="ActiveChunkOne/Terrain" index="67" instance=ExtResource( 4 )]
position = Vector2( -416, 160 )

[node name="Terrain46" parent="ActiveChunkOne/Terrain" index="68" instance=ExtResource( 4 )]
position = Vector2( 416, -96 )

[node name="Terrain91" parent="ActiveChunkOne/Terrain" index="69" instance=ExtResource( 4 )]
position = Vector2( -416, -96 )

[node name="Terrain51" parent="ActiveChunkOne/Terrain" index="70" instance=ExtResource( 4 )]
position = Vector2( 416, -352 )

[node name="Terrain84" parent="ActiveChunkOne/Terrain" index="71" instance=ExtResource( 4 )]
position = Vector2( -416, -352 )

[node name="Terrain54" parent="ActiveChunkOne/Terrain" index="72" instance=ExtResource( 4 )]
position = Vector2( 416, -608 )

[node name="Terrain87" parent="ActiveChunkOne/Terrain" index="73" instance=ExtResource( 4 )]
position = Vector2( -416, -608 )

[node name="Terrain59" parent="ActiveChunkOne/Terrain" index="74" instance=ExtResource( 4 )]
position = Vector2( 416, -864 )

[node name="Terrain95" parent="ActiveChunkOne/Terrain" index="75" instance=ExtResource( 4 )]
position = Vector2( 352, -864 )

[node name="Terrain96" parent="ActiveChunkOne/Terrain" index="76" instance=ExtResource( 4 )]
position = Vector2( 288, -864 )

[node name="Terrain97" parent="ActiveChunkOne/Terrain" index="77" instance=ExtResource( 4 )]
position = Vector2( 224, -864 )

[node name="Terrain98" parent="ActiveChunkOne/Terrain" index="78" instance=ExtResource( 4 )]
position = Vector2( 160, -864 )

[node name="Terrain99" parent="ActiveChunkOne/Terrain" index="79" instance=ExtResource( 4 )]
position = Vector2( 96, -864 )

[node name="Terrain100" parent="ActiveChunkOne/Terrain" index="80" instance=ExtResource( 4 )]
position = Vector2( 32, -864 )

[node name="Terrain101" parent="ActiveChunkOne/Terrain" index="81" instance=ExtResource( 4 )]
position = Vector2( -32, -864 )

[node name="Terrain102" parent="ActiveChunkOne/Terrain" index="82" instance=ExtResource( 4 )]
position = Vector2( -96, -864 )

[node name="Terrain103" parent="ActiveChunkOne/Terrain" index="83" instance=ExtResource( 4 )]
position = Vector2( -160, -864 )

[node name="Terrain104" parent="ActiveChunkOne/Terrain" index="84" instance=ExtResource( 4 )]
position = Vector2( -224, -864 )

[node name="Terrain89" parent="ActiveChunkOne/Terrain" index="85" instance=ExtResource( 4 )]
position = Vector2( -416, -864 )

[node name="Terrain5" parent="ActiveChunkOne/Terrain" index="86" instance=ExtResource( 4 )]
position = Vector2( -96, 864 )

[node name="Terrain21" parent="ActiveChunkOne/Terrain" index="87" instance=ExtResource( 4 )]
position = Vector2( -96, 864 )

[node name="Terrain9" parent="ActiveChunkOne/Terrain" index="88" instance=ExtResource( 4 )]
position = Vector2( 160, 864 )

[node name="Terrain25" parent="ActiveChunkOne/Terrain" index="89" instance=ExtResource( 4 )]
position = Vector2( 160, 864 )

[node name="Terrain6" parent="ActiveChunkOne/Terrain" index="90" instance=ExtResource( 4 )]
position = Vector2( -32, 864 )

[node name="Terrain22" parent="ActiveChunkOne/Terrain" index="91" instance=ExtResource( 4 )]
position = Vector2( -32, 864 )

[node name="Terrain10" parent="ActiveChunkOne/Terrain" index="92" instance=ExtResource( 4 )]
position = Vector2( 224, 864 )

[node name="Terrain16" parent="ActiveChunkOne/Terrain" index="93" instance=ExtResource( 4 )]
position = Vector2( 224, 864 )

[node name="Terrain4" parent="ActiveChunkOne/Terrain" index="94" instance=ExtResource( 4 )]
position = Vector2( -224, 864 )

[node name="Terrain20" parent="ActiveChunkOne/Terrain" index="95" instance=ExtResource( 4 )]
position = Vector2( -224, 864 )

[node name="Terrain8" parent="ActiveChunkOne/Terrain" index="96" instance=ExtResource( 4 )]
position = Vector2( 32, 864 )

[node name="Terrain24" parent="ActiveChunkOne/Terrain" index="97" instance=ExtResource( 4 )]
position = Vector2( 32, 864 )

[node name="Terrain12" parent="ActiveChunkOne/Terrain" index="98" instance=ExtResource( 4 )]
position = Vector2( 288, 864 )

[node name="Terrain17" parent="ActiveChunkOne/Terrain" index="99" instance=ExtResource( 4 )]
position = Vector2( 288, 864 )

[node name="ActiveChunkTwo" type="Node2D" parent="." index="6"]
position = Vector2( 0, -1792 )

[node name="ActiveChunkTwoArea" type="Area2D" parent="ActiveChunkTwo" index="0"]
editor/display_folded = true
position = Vector2( 448, -448 )
__meta__ = {
"_edit_lock_": true
}

[node name="Size" type="CollisionShape2D" parent="ActiveChunkTwo/ActiveChunkTwoArea" index="0"]
shape = SubResource( 4 )

[node name="Terrain" type="Node2D" parent="ActiveChunkTwo" index="1"]
editor/display_folded = true
position = Vector2( 448, -896 )

[node name="Terrain" parent="ActiveChunkTwo/Terrain" index="0" instance=ExtResource( 4 )]
position = Vector2( -416, 864 )

[node name="Terrain7" parent="ActiveChunkTwo/Terrain" index="1" instance=ExtResource( 4 )]
position = Vector2( -160, 864 )

[node name="Terrain11" parent="ActiveChunkTwo/Terrain" index="2" instance=ExtResource( 4 )]
position = Vector2( 96, 864 )

[node name="Terrain14" parent="ActiveChunkTwo/Terrain" index="3" instance=ExtResource( 4 )]
position = Vector2( 352, 864 )

[node name="Terrain13" parent="ActiveChunkTwo/Terrain" index="4" instance=ExtResource( 4 )]
position = Vector2( 416, 864 )

[node name="Terrain32" parent="ActiveChunkTwo/Terrain" index="5" instance=ExtResource( 4 )]
position = Vector2( 416, 608 )

[node name="Terrain65" parent="ActiveChunkTwo/Terrain" index="6" instance=ExtResource( 4 )]
position = Vector2( -416, 608 )

[node name="Terrain37" parent="ActiveChunkTwo/Terrain" index="7" instance=ExtResource( 4 )]
position = Vector2( 416, 352 )

[node name="Terrain70" parent="ActiveChunkTwo/Terrain" index="8" instance=ExtResource( 4 )]
position = Vector2( -416, 352 )

[node name="Terrain42" parent="ActiveChunkTwo/Terrain" index="9" instance=ExtResource( 4 )]
position = Vector2( 416, 96 )

[node name="Terrain72" parent="ActiveChunkTwo/Terrain" index="10" instance=ExtResource( 4 )]
position = Vector2( -416, 96 )

[node name="Terrain47" parent="ActiveChunkTwo/Terrain" index="11" instance=ExtResource( 4 )]
position = Vector2( 416, -160 )

[node name="Terrain79" parent="ActiveChunkTwo/Terrain" index="12" instance=ExtResource( 4 )]
position = Vector2( -416, -160 )

[node name="Terrain52" parent="ActiveChunkTwo/Terrain" index="13" instance=ExtResource( 4 )]
position = Vector2( 416, -416 )

[node name="Terrain81" parent="ActiveChunkTwo/Terrain" index="14" instance=ExtResource( 4 )]
position = Vector2( -416, -416 )

[node name="Terrain57" parent="ActiveChunkTwo/Terrain" index="15" instance=ExtResource( 4 )]
position = Vector2( 416, -672 )

[node name="Terrain82" parent="ActiveChunkTwo/Terrain" index="16" instance=ExtResource( 4 )]
position = Vector2( -416, -672 )

[node name="Terrain33" parent="ActiveChunkTwo/Terrain" index="17" instance=ExtResource( 4 )]
position = Vector2( 416, 608 )

[node name="Terrain66" parent="ActiveChunkTwo/Terrain" index="18" instance=ExtResource( 4 )]
position = Vector2( -416, 608 )

[node name="Terrain38" parent="ActiveChunkTwo/Terrain" index="19" instance=ExtResource( 4 )]
position = Vector2( 416, 352 )

[node name="Terrain71" parent="ActiveChunkTwo/Terrain" index="20" instance=ExtResource( 4 )]
position = Vector2( -416, 352 )

[node name="Terrain43" parent="ActiveChunkTwo/Terrain" index="21" instance=ExtResource( 4 )]
position = Vector2( 416, 96 )

[node name="Terrain77" parent="ActiveChunkTwo/Terrain" index="22" instance=ExtResource( 4 )]
position = Vector2( -416, 96 )

[node name="Terrain50" parent="ActiveChunkTwo/Terrain" index="23" instance=ExtResource( 4 )]
position = Vector2( 416, -160 )

[node name="Terrain94" parent="ActiveChunkTwo/Terrain" index="24" instance=ExtResource( 4 )]
position = Vector2( -416, -160 )

[node name="Terrain56" parent="ActiveChunkTwo/Terrain" index="25" instance=ExtResource( 4 )]
position = Vector2( 416, -416 )

[node name="Terrain88" parent="ActiveChunkTwo/Terrain" index="26" instance=ExtResource( 4 )]
position = Vector2( -416, -416 )

[node name="Terrain60" parent="ActiveChunkTwo/Terrain" index="27" instance=ExtResource( 4 )]
position = Vector2( 416, -672 )

[node name="Terrain92" parent="ActiveChunkTwo/Terrain" index="28" instance=ExtResource( 4 )]
position = Vector2( -416, -672 )

[node name="Terrain29" parent="ActiveChunkTwo/Terrain" index="29" instance=ExtResource( 4 )]
position = Vector2( 416, 800 )

[node name="Terrain62" parent="ActiveChunkTwo/Terrain" index="30" instance=ExtResource( 4 )]
position = Vector2( -416, 800 )

[node name="Terrain34" parent="ActiveChunkTwo/Terrain" index="31" instance=ExtResource( 4 )]
position = Vector2( 416, 544 )

[node name="Terrain67" parent="ActiveChunkTwo/Terrain" index="32" instance=ExtResource( 4 )]
position = Vector2( -416, 544 )

[node name="Terrain39" parent="ActiveChunkTwo/Terrain" index="33" instance=ExtResource( 4 )]
position = Vector2( 416, 288 )

[node name="Terrain75" parent="ActiveChunkTwo/Terrain" index="34" instance=ExtResource( 4 )]
position = Vector2( -416, 288 )

[node name="Terrain44" parent="ActiveChunkTwo/Terrain" index="35" instance=ExtResource( 4 )]
position = Vector2( 416, 32 )

[node name="Terrain73" parent="ActiveChunkTwo/Terrain" index="36" instance=ExtResource( 4 )]
position = Vector2( -416, 32 )

[node name="Terrain48" parent="ActiveChunkTwo/Terrain" index="37" instance=ExtResource( 4 )]
position = Vector2( 416, -224 )

[node name="Terrain90" parent="ActiveChunkTwo/Terrain" index="38" instance=ExtResource( 4 )]
position = Vector2( -416, -224 )

[node name="Terrain55" parent="ActiveChunkTwo/Terrain" index="39" instance=ExtResource( 4 )]
position = Vector2( 416, -480 )

[node name="Terrain85" parent="ActiveChunkTwo/Terrain" index="40" instance=ExtResource( 4 )]
position = Vector2( -416, -480 )

[node name="Terrain58" parent="ActiveChunkTwo/Terrain" index="41" instance=ExtResource( 4 )]
position = Vector2( 416, -736 )

[node name="Terrain83" parent="ActiveChunkTwo/Terrain" index="42" instance=ExtResource( 4 )]
position = Vector2( -416, -736 )

[node name="Terrain30" parent="ActiveChunkTwo/Terrain" index="43" instance=ExtResource( 4 )]
position = Vector2( 416, 736 )

[node name="Terrain63" parent="ActiveChunkTwo/Terrain" index="44" instance=ExtResource( 4 )]
position = Vector2( -416, 736 )

[node name="Terrain35" parent="ActiveChunkTwo/Terrain" index="45" instance=ExtResource( 4 )]
position = Vector2( 416, 480 )

[node name="Terrain68" parent="ActiveChunkTwo/Terrain" index="46" instance=ExtResource( 4 )]
position = Vector2( -416, 480 )

[node name="Terrain40" parent="ActiveChunkTwo/Terrain" index="47" instance=ExtResource( 4 )]
position = Vector2( 416, 224 )

[node name="Terrain76" parent="ActiveChunkTwo/Terrain" index="48" instance=ExtResource( 4 )]
position = Vector2( -416, 224 )

[node name="Terrain45" parent="ActiveChunkTwo/Terrain" index="49" instance=ExtResource( 4 )]
position = Vector2( 416, -32 )

[node name="Terrain74" parent="ActiveChunkTwo/Terrain" index="50" instance=ExtResource( 4 )]
position = Vector2( -416, -32 )

[node name="Terrain49" parent="ActiveChunkTwo/Terrain" index="51" instance=ExtResource( 4 )]
position = Vector2( 416, -288 )

[node name="Terrain80" parent="ActiveChunkTwo/Terrain" index="52" instance=ExtResource( 4 )]
position = Vector2( -416, -288 )

[node name="Terrain53" parent="ActiveChunkTwo/Terrain" index="53" instance=ExtResource( 4 )]
position = Vector2( 416, -544 )

[node name="Terrain93" parent="ActiveChunkTwo/Terrain" index="54" instance=ExtResource( 4 )]
position = Vector2( -416, -544 )

[node name="Terrain61" parent="ActiveChunkTwo/Terrain" index="55" instance=ExtResource( 4 )]
position = Vector2( 416, -800 )

[node name="Terrain86" parent="ActiveChunkTwo/Terrain" index="56" instance=ExtResource( 4 )]
position = Vector2( -416, -800 )

[node name="Terrain31" parent="ActiveChunkTwo/Terrain" index="57" instance=ExtResource( 4 )]
position = Vector2( 416, 672 )

[node name="Terrain64" parent="ActiveChunkTwo/Terrain" index="58" instance=ExtResource( 4 )]
position = Vector2( -416, 672 )

[node name="Terrain36" parent="ActiveChunkTwo/Terrain" index="59" instance=ExtResource( 4 )]
position = Vector2( 416, 416 )

[node name="Terrain69" parent="ActiveChunkTwo/Terrain" index="60" instance=ExtResource( 4 )]
position = Vector2( -416, 416 )

[node name="Terrain41" parent="ActiveChunkTwo/Terrain" index="61" instance=ExtResource( 4 )]
position = Vector2( 416, 160 )

[node name="Terrain78" parent="ActiveChunkTwo/Terrain" index="62" instance=ExtResource( 4 )]
position = Vector2( -416, 160 )

[node name="Terrain46" parent="ActiveChunkTwo/Terrain" index="63" instance=ExtResource( 4 )]
position = Vector2( 416, -96 )

[node name="Terrain91" parent="ActiveChunkTwo/Terrain" index="64" instance=ExtResource( 4 )]
position = Vector2( -416, -96 )

[node name="Terrain51" parent="ActiveChunkTwo/Terrain" index="65" instance=ExtResource( 4 )]
position = Vector2( 416, -352 )

[node name="Terrain84" parent="ActiveChunkTwo/Terrain" index="66" instance=ExtResource( 4 )]
position = Vector2( -416, -352 )

[node name="Terrain54" parent="ActiveChunkTwo/Terrain" index="67" instance=ExtResource( 4 )]
position = Vector2( 416, -608 )

[node name="Terrain87" parent="ActiveChunkTwo/Terrain" index="68" instance=ExtResource( 4 )]
position = Vector2( -416, -608 )

[node name="Terrain59" parent="ActiveChunkTwo/Terrain" index="69" instance=ExtResource( 4 )]
position = Vector2( 416, -864 )

[node name="Terrain95" parent="ActiveChunkTwo/Terrain" index="70" instance=ExtResource( 4 )]
position = Vector2( 352, -864 )

[node name="Terrain96" parent="ActiveChunkTwo/Terrain" index="71" instance=ExtResource( 4 )]
position = Vector2( 288, -864 )

[node name="Terrain97" parent="ActiveChunkTwo/Terrain" index="72" instance=ExtResource( 4 )]
position = Vector2( 224, -864 )

[node name="Terrain98" parent="ActiveChunkTwo/Terrain" index="73" instance=ExtResource( 4 )]
position = Vector2( 160, -864 )

[node name="Terrain99" parent="ActiveChunkTwo/Terrain" index="74" instance=ExtResource( 4 )]
position = Vector2( 96, -864 )

[node name="Terrain100" parent="ActiveChunkTwo/Terrain" index="75" instance=ExtResource( 4 )]
position = Vector2( 32, -864 )

[node name="Terrain101" parent="ActiveChunkTwo/Terrain" index="76" instance=ExtResource( 4 )]
position = Vector2( -32, -864 )

[node name="Terrain102" parent="ActiveChunkTwo/Terrain" index="77" instance=ExtResource( 4 )]
position = Vector2( -96, -864 )

[node name="Terrain103" parent="ActiveChunkTwo/Terrain" index="78" instance=ExtResource( 4 )]
position = Vector2( -160, -864 )

[node name="Terrain104" parent="ActiveChunkTwo/Terrain" index="79" instance=ExtResource( 4 )]
position = Vector2( -224, -864 )

[node name="Terrain89" parent="ActiveChunkTwo/Terrain" index="80" instance=ExtResource( 4 )]
position = Vector2( -416, -864 )

[node name="Terrain5" parent="ActiveChunkTwo/Terrain" index="81" instance=ExtResource( 4 )]
position = Vector2( -96, 864 )

[node name="Terrain9" parent="ActiveChunkTwo/Terrain" index="82" instance=ExtResource( 4 )]
position = Vector2( 160, 864 )

[node name="Terrain6" parent="ActiveChunkTwo/Terrain" index="83" instance=ExtResource( 4 )]
position = Vector2( -32, 864 )

[node name="Terrain10" parent="ActiveChunkTwo/Terrain" index="84" instance=ExtResource( 4 )]
position = Vector2( 224, 864 )

[node name="Terrain4" parent="ActiveChunkTwo/Terrain" index="85" instance=ExtResource( 4 )]
position = Vector2( -224, 864 )

[node name="Terrain8" parent="ActiveChunkTwo/Terrain" index="86" instance=ExtResource( 4 )]
position = Vector2( 32, 864 )

[node name="Terrain12" parent="ActiveChunkTwo/Terrain" index="87" instance=ExtResource( 4 )]
position = Vector2( 288, 864 )

